Fix image alignment

--- a/css/main.sass
+++ b/css/main.sass
@@ -463,7 +463,10 @@ body
     
   .media-content
     flex-grow: 1 // Allow the text content to take up remaining space
-    padding-bottom: 10px // Less padding for paragraphs within this block 
+    padding-bottom: 10px // Less padding for paragraphs within this block
+    p:first-child
+      margin-top: 0
+      padding-top: 0
       // You can add specific text styling for this block if needed
         // Override or adjust paragraph styles specifically within media-content if needed
         
